chore: set temporary description for stats and settings sections

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -122,7 +122,9 @@
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
-          <div class="stats__container stats__container--js"></div>
+          <div class="stats__container stats__container--js">
+            <p class="stats__text">Check out again soon...</p>
+          </div>
         </section>
         <!-------------------------------------------- END OF STATS SECTION -->
         <!------------------------------------------ END OF ARCHIVE SECTION -->
@@ -135,7 +137,9 @@
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
-          <div class="settings__container settings__container--js"></div>
+          <div class="settings__container settings__container--js">
+            <p class="settings__text">Check out again soon...</p>
+          </div>
         </section>
         <!----------------------------------------- END OF SETTINGS SECTION -->
       </section>
