feat: add emo-indicator to 'add entry' window

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -149,14 +149,19 @@
         <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
         <div class="new-entry__container">
           <p class="new-entry__value new-entry__value--js"></p>
+          <div class="indicator indicator--new indicator--js-new">
+
+
+
+          </div>
           <button class="button new-entry__button new-entry__button--decrease new-entry__button--js-decrease">
             <svg class="new-entry__svg new-entry__svg--decrease" viewBox="0 0 512 512">
-              <use href="assets/svg/icons.svg#left-arrow"></use>
+              <use href="assets/svg/icons.svg#down-arrow"></use>
             </svg>
           </button>
           <button class="button new-entry__button new-entry__button--increase new-entry__button--js-increase">
             <svg class="new-entry__svg new-entry__svg--increase" viewBox="0 0 512 512">
-              <use href="assets/svg/icons.svg#right-arrow"></use>
+              <use href="assets/svg/icons.svg#up-arrow"></use>
             </svg>
           </button>
           <button class="button new-entry__button new-entry__button--cancel new-entry__button--js-cancel">
