chore: add minus and plus buttons to sprite map

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -146,16 +146,20 @@
         <section class="new-entry new-entry--js">
           <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
           <div class="new-entry__container">
-            <p class="new-entry__value new-entry__value--js"></p>
+            <div class="new-entry__display new-entry__display--js">
+              <p class="new-entry__value new-entry__value--js"></p>
+              <p class="new-entry__date new-entry__date--js"></p>
+              <p class="new-entry__day new-entry__day--js"></p>
+            </div>
             <div class="indicator indicator--new indicator--js-new"></div>
             <button class="button new-entry__button new-entry__button--decrease new-entry__button--js-decrease">
               <svg class="new-entry__svg new-entry__svg--decrease" viewBox="0 0 512 512">
-                <use href="assets/svg/icons.svg#down-arrow"></use>
+                <use href="assets/svg/icons.svg#minus-circle"></use>
               </svg>
             </button>
             <button class="button new-entry__button new-entry__button--increase new-entry__button--js-increase">
               <svg class="new-entry__svg new-entry__svg--increase" viewBox="0 0 512 512">
-                <use href="assets/svg/icons.svg#up-arrow"></use>
+                <use href="assets/svg/icons.svg#plus-circle"></use>
               </svg>
             </button>
             <button class="button new-entry__button new-entry__button--cancel new-entry__button--js-cancel">
@@ -168,11 +172,11 @@
                 <use href="assets/svg/icons.svg#save-icon"></use>
               </svg>
             </button>
-            <button class="button new-entry__button new-entry__button--date new-entry__button--js-date">
+            <!-- <button class="button new-entry__button new-entry__button--date new-entry__button--js-date">
               <svg class="new-entry__svg new-entry__svg--date" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#save-icon"></use>
               </svg>
-            </button>
+            </button> -->
           </div>
         </section>
         <!-------------------------------- END OF ARCHIVE ADD NEW MODAL BOX -->
