--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
   <![endif]-->
   <!--| HYDRAPP                                                            |-->
   <main class="app">
-    <!--| NAVIGATION                                                       |-->
+    <!--| PAGE HEADER                                                      |-->
     <header class="app__header">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
       <a class="logo" href="index.html">
@@ -53,35 +53,29 @@
         </svg>
       </button>
     </header>
-    <!--| end of NAVIGATION                                                |-->
-
-
+    <!--| end of PAGE HEADER                                               |-->
     <!--| APP CONTAINER                                                    |-->
-    <!-- <div class="app__container app__container--js"> -->
-      <!--: GLASS SECTION                                                  :-->
-      <!-- <section class="glass">
-        <h2 class="glass__heading visuallyhidden">Glass of water</h2>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 252 366" enable-background="new 0 0 252 366" class="glass__svg">
-          <g id="glass">
-            <path class="glass__outline" d="M185.7,355H66.3c-6.2,0-11.5-4.6-12.3-10.8L11.1,25.1c-1-7.5,4.8-14.1,12.3-14.1h205.1
-            c7.5,0,13.3,6.6,12.3,14.1L198,344.2C197.2,350.4,192,355,185.7,355z"/>
-            <path class="glass__fill" d="M68.9,339.6l-26.2-195l1.9-0.8c13.4-5.7,26.8-8.5,39.9-8.5c1.8,0,3.7,0.1,5.5,0.2c15.8,1,26.9,5.8,37.7,10.4
-            c10.6,4.6,20.6,8.9,34.8,9.8c1.7,0.1,3.5,0.2,5.2,0.2c12,0,24.5-2.7,37.1-8.2l4.4-1.9l-0.6,4.8c-0.1,0.6-25.4,189-25.4,189H68.9z"
-              />
-          </g>
+    <div class="app__container app__container--js">
+      <!-- <h2 class="glass__heading visuallyhidden">Main</h2> -->
+      <!--: COUNTER SECTION                                                :-->
+      <section class="counter">
+        <svg class="counter__svg counter__svg--js-first" viewBox="0 0 75 100">
+          <use href="assets/svg/digits.svg#digit-0"></use>
         </svg>
-        <p class="glass__counter glass__counter--js"></p>
-      </section> -->
+        <svg class="counter__svg counter__svg--js-second" viewBox="0 0 75 100">
+          <use href="assets/svg/digits.svg#digit-4"></use>
+        </svg>
+      </section>
       <!--: end of GLASS SECTION                                           :-->
-      <!--: GLASS BUTTONS                                                  :-->
-      <!-- <button class="button app__button app__button--add app__button--js-add">
-        Add glass
-      </button>
-      <button class="button app__button app__button--remove app__button--js-remove">
-        Remove glass
-      </button> -->
-      <!--: end of GLASS BUTTONS                                           :-->
-    <!-- </div> -->
+    </div>
+    <!--: GLASS BUTTONS                                                    :-->
+    <!-- <button class="button app__button app__button--add app__button--js-add">
+      Add glass
+    </button>
+    <button class="button app__button app__button--remove app__button--js-remove">
+      Remove glass
+    </button> -->
+    <!--: end of GLASS BUTTONS                                             :-->
     <!--| end of APP CONTAINER                                             |-->
     <!--| MOBILE MENU                                                      |-->
     <section class="mobile-menu mobile-menu--js">
