feat: add temporary emoji icon

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
       </button>
     </header>
     <!--| end of PAGE HEADER                                               |-->
-    <!--| COUNTER                                                          |-->
+    <!--| COUNTER                                                          |-->    
     <section class="counter">
       <h2 class="counter__heading visuallyhidden">Glass counter</h2>
       <svg class="counter__svg counter__svg--js-first" viewBox="0 0 75 100">
@@ -78,13 +78,11 @@
           <use href="assets/svg/icons.svg#minus-circle"></use>
         </svg>
       </button>
-      <button class="controls__button">
-        <svg class="controls__svg" viewBox="0 0 512 512">
-          <use href="assets/svg/icons.svg#minus-circle"></use>
+      <div class="emoji emoji--controls">
+        <svg class="emoji__svg emoji__svg--visible emoji__svg--emo-6" viewBox="0 0 512 512">
+          <use href="assets/svg/emoji.svg#emo-6"></use>
         </svg>
-      </button>
-
-
+      </div>
 
 
 
