feat: animate water level while increasing / decreasing water value

--- a/app/index.html
+++ b/app/index.html
@@ -57,19 +57,19 @@
     <!--| APP CONTAINER                                                    |-->
     <div class="app__container">
       <!--| COUNTER                                                        |-->
-      <!-- <section class="counter counter--js">
-        <h2 class="counter__heading">Monday</h2> -->
+      <section class="counter counter--js">
+        <h2 class="counter__heading">Monday</h2>
         <!--: TENTHS                                                       :-->
-        <!-- <div class="digit digit--tenths">
+        <div class="digit digit--tenths">
           <svg class="digit__svg digit__svg--js-prevTenths" viewBox="0 0 75 100">
             <use href=""></use>
           </svg>
           <svg class="digit__svg digit--overlay digit__svg--js-nextTenths" viewBox="0 0 75 100">
             <use href=""></use>
           </svg>
-        </div> -->
+        </div>
         <!--: ONES                                                         :-->
-        <!-- <div class="digit digit--ones">
+        <div class="digit digit--ones">
           <svg class="digit__svg digit__svg--js-prevOnes" viewBox="0 0 75 100">
             <use href=""></use>
           </svg>
@@ -78,42 +78,21 @@
           </svg>
         </div>
         <p class="counter__text">glasses. Drink more!</p>
-      </section> -->
+      </section>
       <!--| end of COUNTER                                                 |-->
       <!--                                                                  -->
       <!--| WATER                                                          |-->
-      <div class="water">
-        <div class="waves">
-          <div class="wave wave--before">
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-          </div>
-          <div class="wave">
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-          </div>
-          <div class="wave wave--after">
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-            <svg class="wave__svg" viewBox="0 0 100 10">
-              <use href="assets/svg/wave.svg#wave"></use>
-            </svg>
-          </div>
+      <div class="water water--js">
+        <div class="waves waves--js">
+          <div class="wave wave--before wave--js"></div>
+          <div class="wave wave--js"></div>
+          <div class="wave wave--after wave--js"></div>
         </div>
       </div>
       <!--| end of WATER                                                   |-->
       <!--                                                                  -->
       <!--| CONTROLS                                                       |-->
-      <!-- <div class="controls controls--js">
+      <div class="controls controls--js">
         <button class="controls__button controls__button--add controls__button--js-add">
           <svg class="controls__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#plus-circle"></use>
@@ -129,7 +108,7 @@
             <use href="assets/svg/emoji.svg#emo-6"></use>
           </svg>
         </div>
-      </div> -->
+      </div>
       <!--| end of CONTROLS                                                |-->
       <!--                                                                  -->
 
