feat: display correct emoji at page load

--- a/app/index.html
+++ b/app/index.html
@@ -103,11 +103,7 @@
             <use href="assets/svg/icons.svg#minus-circle"></use>
           </svg>
         </button>
-        <div class="emoji emoji--controls">
-          <svg class="emoji__svg emoji__svg--visible emoji__svg--emo-6" viewBox="0 0 512 512">
-            <use href="assets/svg/emoji.svg#emo-6"></use>
-          </svg>
-        </div>
+        <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
       <!--| end of CONTROLS                                                |-->
       <!--                                                                  -->
