style(header): update burger button's svg icon

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       </a>
       <button class="burgerBtn burgerBtn--js">
         <svg class="burgerBtn__svg" viewBox="0 0 512 512">
-          <use href="assets/svg/icons.svg#burger-button"></use>
+          <use href="assets/svg/icons.svg#burger-circle"></use>
         </svg>
       </button>
     </header>
