feat: add responsive water measure based on water max value

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
   <![endif]-->
   <main class="app">
     <!--| APP HEADER                                                       |-->
-    <header class="app__header">
+    <header class="app__header app__header--js">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
       <a class="logo" href="index.html">
         <svg class="logo__svg" viewBox="0 0 512 135">
@@ -79,8 +79,6 @@
         </div>
         <p class="counter__text">glasses. Drink more!</p>
       </section>
-      <!--| end of COUNTER                                                 |-->
-      <!--                                                                  -->
       <!--| WATER                                                          |-->
       <div class="water water--js">
         <div class="waves waves--js">
@@ -89,8 +87,6 @@
           <div class="wave wave--after wave--js"></div>
         </div>
       </div>
-      <!--| end of WATER                                                   |-->
-      <!--                                                                  -->
       <!--| CONTROLS                                                       |-->
       <div class="controls controls--js">
         <button class="controls__button controls__button--add controls__button--js-add">
@@ -105,12 +101,8 @@
         </button>
         <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
-      <!--| end of CONTROLS                                                |-->
-      <!--                                                                  -->
-
-      
-
-
+      <!--| MEASURE                                                        |-->
+      <ul class="measure measure--js"></ul>
     </div>
     <!--| end of APP CONTAINER                                             |-->
     <!--//                                                               //|-->
