--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
             <use href=""></use>
           </svg>
         </div>
-        <p class="counter__text">glasses. Drink more!</p>
+        <p class="counter__message counter__message--js">glasses. Drink more!</p>
       </section>
       <!--| WATER                                                          |-->
       <div class="water water--js">
