feat: add current day and date to counter display

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,8 @@
     <div class="app__container">
       <!--| COUNTER                                                        |-->
       <section class="counter counter--js">
-        <h2 class="counter__heading">Monday</h2>
+        <h2 class="counter__day counter__day--js"></h2>
+        <p class="counter__date counter__date--js"></p>
         <!--: TENTHS                                                       :-->
         <div class="digit digit--tenths">
           <svg class="digit__svg digit__svg--js-prevTenths" viewBox="0 0 75 100">
@@ -77,7 +78,7 @@
             <use href=""></use>
           </svg>
         </div>
-        <p class="counter__message counter__message--js">glasses. Drink more!</p>
+        <p class="counter__message counter__message--js"></p>
       </section>
       <!--| WATER                                                          |-->
       <div class="water water--js">
