feat: add average and optimal water levels as dashed lines

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,9 @@
       </div>
       <!--| MEASURE                                                        |-->
       <ul class="measure measure--js"></ul>
+      <!--| WATER LEVELS                                                   |-->
+      <div class="level level--average level--js-average"></div>
+      <div class="level level--optimal level--js-optimal"></div>
     </div>
     <!--| end of APP CONTAINER                                             |-->
     <!--//                                                               //|-->
