--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
     <!--| APP HEADER                                                       |-->
     <header class="app__header app__header--js">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
+      <!--: APP LOGO                                                       :-->
       <a class="logo" href="index.html">
         <svg class="logo__svg" viewBox="0 0 512 135">
           <use href="assets/svg/icons.svg#logo-white"></use>
@@ -46,8 +47,9 @@
           <use href="assets/svg/icons.svg#logo-color"></use>
         </svg>
       </a>
-      <button class="burgerBtn burgerBtn--js">
-        <svg class="burgerBtn__svg" viewBox="0 0 512 512">
+      <!--: BURGER BUTTON                                                  :-->
+      <button class="button button--burger button--js-burger">
+        <svg class="button__svg" viewBox="0 0 512 512">
           <use href="assets/svg/icons.svg#burger-circle"></use>
         </svg>
       </button>
@@ -55,10 +57,11 @@
     <!--| end of APP HEADER                                                |-->
     <!--//                                                               //|-->
     <!--| APP CONTAINER                                                    |-->
-    <div class="app__container">
+    <section class="app__main">
+      <h2 class="app__heading visuallyhidden">Main section</h2>
       <!--| COUNTER                                                        |-->
-      <section class="counter counter--js">
-        <h2 class="counter__day counter__day--js"></h2>
+      <div class="counter counter--js">
+        <p class="counter__day counter__day--js"></p>
         <p class="counter__date counter__date--js"></p>
         <!--: TENTHS                                                       :-->
         <div class="digit digit--tenths">
@@ -79,7 +82,8 @@
           </svg>
         </div>
         <p class="counter__message counter__message--js"></p>
-      </section>
+      </div>
+      <!----                                                              ---->
       <!--| WATER                                                          |-->
       <div class="water water--js">
         <div class="waves waves--js">
@@ -88,43 +92,47 @@
           <div class="wave wave--after wave--js"></div>
         </div>
       </div>
+      <!----                                                              ---->
       <!--| CONTROLS                                                       |-->
       <div class="controls controls--js">
-        <button class="controls__button controls__button--add controls__button--js-add">
-          <svg class="controls__svg" viewBox="0 0 512 512">
+        <button class="button button--add button--js-add">
+          <svg class="button__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#plus-circle"></use>
           </svg>
         </button>
-        <button class="controls__button controls__button--remove controls__button--js-remove">
-          <svg class="controls__svg" viewBox="0 0 512 512">
+        <button class="button button--remove button--js-remove">
+          <svg class="button__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#minus-circle"></use>
           </svg>
         </button>
         <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
-      <!--| MEASURE                                                        |-->
+      <!----                                                              ---->
+      <!--| MEASURE AND LEVELES                                            |-->
       <ul class="measure measure--js"></ul>
-      <!--| WATER LEVELS                                                   |-->
       <div class="level level--average level--js-average"></div>
       <div class="level level--optimal level--js-optimal"></div>
-    </div>
+    </section>
     <!--| end of APP CONTAINER                                             |-->
     <!--//                                                               //|-->
-    <!--| MOBILE MENU                                                      |-->
-    <section class="mobile-menu mobile-menu--js">
-      <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
-      <!--: ARCHIVE SECTION                                                :-->
-      <section class="archive archive--js">
-        <h3 class="archive__heading visuallyhidden">Archive</h3>
-        <button class="button mobile-menu__section mobile-menu__section--js-archive">
-          <p class="mobile-menu__title">Archive</p>
-          <svg class="mobile-menu__svg" viewBox="0 0 512 512">
-            <use href="assets/svg/icons.svg#plus-cross"></use>
-          </svg>
-        </button>
-        <div class="archive__weeks archive__weeks--js"></div>
+    <!--| APP SECTIONS                                                     |-->
+    <section class="app__sidebar app__sidebar--js">
+      <h2 class="app__heading visuallyhidden">App sidebar</h2>
+      <!----                                                              ---->
+      <!--: ARCHIVE TAB                                                  :-->
+      <section class="tab tab--archive tab--js-archive">
+        <h3 class="tab__header">
+          <button class="tab__button tab__button--js-archive">
+            <span class="tab__heading">Archive</span>
+            <svg class="tab__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+        </h3>
+        <div class="tab__weeks tab__weeks--js"></div>
       </section>
       <!--: end of ARCHIVE SECTION                                         :-->
+      <!----                                                              ---->
       <!--: STATS SECTION                                                  :-->
       <section class="stats stats--js">
         <h3 class="stats__heading visuallyhidden">Stats</h3>
@@ -139,7 +147,7 @@
         </div>
       </section>
       <!--: end of STATS SECTION                                           :-->
-      <!--: end of ARCHIVE SECTION                                         :-->
+      <!----                                                              ---->
       <!--: SETTINGS SECTION                                               :-->
       <section class="settings settings--js">
         <h3 class="settings__heading visuallyhidden">Settings</h3>
@@ -154,6 +162,7 @@
         </div>
       </section>
       <!--:  end of SETTINGS SECTION                                       :-->
+      <!----                                                              ---->
       <!--: ARCHIVE ADD NEW MODAL BOX                                      :-->
       <section class="new-entry new-entry--js">
         <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
@@ -191,7 +200,7 @@
           </button> -->
         </div>
       </section>
-      <!--: end of ARCHIVE ADD NEW MODAL BOX                               :-->
+      <!--| end of APP SECTIONS                                            |-->
     </section>
     <!--| end of MOBILE MENU                                               |-->
   </main>
