feat(sidebar): adjust appearance of stats and settings tabs in sidebar

--- a/app/index.html
+++ b/app/index.html
@@ -129,35 +129,37 @@
             </svg>
           </button>
         </h3>
-        <div class="tab__weeks tab__weeks--js"></div>
+        <div class="archive archive--js"></div>
       </section>
       <!--: end of ARCHIVE SECTION                                         :-->
       <!----                                                              ---->
       <!--: STATS SECTION                                                  :-->
-      <section class="stats stats--js">
-        <h3 class="stats__heading visuallyhidden">Stats</h3>
-        <button class="button mobile-menu__section mobile-menu__section--js-stats">
-          <p class="mobile-menu__title">Stats</p>
-          <svg class="mobile-menu__svg" viewBox="0 0 512 512">
-            <use href="assets/svg/icons.svg#plus-cross"></use>
-          </svg>
-        </button>
-        <div class="stats__container stats__container--js">
+      <section class="tab tab--stats tab--js-stats">
+        <h3 class="tab__header">
+          <button class="tab__button tab__button--js-stats">
+            <span class="tab__heading">Stats</span>
+            <svg class="tab__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+        </h3>
+        <div class="stats stats--js">
           <p class="stats__text">Check out again soon...</p>
         </div>
       </section>
       <!--: end of STATS SECTION                                           :-->
       <!----                                                              ---->
       <!--: SETTINGS SECTION                                               :-->
-      <section class="settings settings--js">
-        <h3 class="settings__heading visuallyhidden">Settings</h3>
-        <button class="button mobile-menu__section mobile-menu__section--js-settings">
-          <p class="mobile-menu__title">Settings</p>
-          <svg class="mobile-menu__svg" viewBox="0 0 512 512">
-            <use href="assets/svg/icons.svg#plus-cross"></use>
-          </svg>
-        </button>
-        <div class="settings__container settings__container--js">
+      <section class="tab tab--settings tab--js-settings">
+        <h3 class="tab__header">
+          <button class="tab__button tab__button--js-stats">
+            <span class="tab__heading">Settings</span>
+            <svg class="tab__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+        </h3>
+        <div class="settings settings-js">
           <p class="settings__text">Check out again soon...</p>
         </div>
       </section>
