feat(sidebar): toggle tabs containers visibility

--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,7 @@
             </svg>
           </button>
         </h3>
-        <div class="archive archive--js"></div>
+        <div class="tab__container tab__container--js tab__container--js-archive"></div>
       </section>
       <!--: end of ARCHIVE SECTION                                         :-->
       <!----                                                              ---->
@@ -143,8 +143,10 @@
             </svg>
           </button>
         </h3>
-        <div class="stats stats--js">
-          <p class="stats__text">Check out again soon...</p>
+        <div class="tab__container tab__container--js">
+          <div class="stats stats--js">
+            <p class="stats__text">Check out again soon...</p>
+          </div>
         </div>
       </section>
       <!--: end of STATS SECTION                                           :-->
@@ -152,15 +154,17 @@
       <!--: SETTINGS SECTION                                               :-->
       <section class="tab tab--settings tab--js-settings">
         <h3 class="tab__header">
-          <button class="tab__button tab__button--js-stats">
+          <button class="tab__button tab__button--js-settings">
             <span class="tab__heading">Settings</span>
             <svg class="tab__svg" viewBox="0 0 512 512">
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
         </h3>
-        <div class="settings settings-js">
-          <p class="settings__text">Check out again soon...</p>
+        <div class="tab__container tab__container--js">
+          <div class="settings settings-js">
+            <p class="settings__text">Check out again soon...</p>
+          </div>
         </div>
       </section>
       <!--:  end of SETTINGS SECTION                                       :-->
